--- a/form.html
+++ b/form.html
@@ -83,7 +83,7 @@
             </div>
         </section>
     </main>
-    <script type="module" src="/main.mjs"></script>
+    <script type="module" src="./main.mjs"></script>
     <footer class="footer">
         <a class="footer__button" href="https://github.com/nobody-redhawk" target="_blank">Realizado
             por<strong> @nobody-redhawk</strong></a>
